src/assets/scss/partials/_home.scss: Add attempt to fix wrapping text bug on safari on home screen

--- a/src/assets/scss/partials/_home.scss
+++ b/src/assets/scss/partials/_home.scss
@@ -35,6 +35,8 @@
   padding-bottom: 10px;
 
   white-space: nowrap;
+  float: left;
+  margin-right: 0.5em;
 }
 
 .home-text-small {
